# pico-scope

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: debug.h  http_request.h  lwipopts.h  main.c  memory.h  request.h  setupWifi.h  ws_request.h
